# FastAPI-core

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.md
app/: main.py
app/core/: __init__.py  config.py  database.py  redis_client.py
